--- a/分支管理.md
+++ b/分支管理.md
@@ -31,3 +31,59 @@
 ```
 查看分支跟踪情况: git branch -vv
 ```
+### 二、远程操作
+##### 1、拉取并合并
+```
+git pull
+git pull origin
+git pull origin <name>
+```
+```
+注意: 从远端拉取:git pull;如果你没有关联远端，则有问题，
+关联远端命令为:git branch --set-upstream 当前分支名 origin/远端分支名
+```
+##### 2、单单拉取
+```
+git fetch
+git fetch origin
+git fetch origin <name>
+```
+##### 3、跟踪远程分支
+```
+#指定分支名进行跟踪
+git branch --set-upstream 分支名 origin/远程分支名
+```
+```
+#把当前分支进行关联远端分支
+git branch -u origin/远端分支名
+```
+##### 4、推送分支到远程仓库
+```
+git push origin <name>
+#推到远端并跟踪
+git push -u origin <name>
+#推到远端并跟踪形式二
+git push --set-upstream origin <name>
+```
+##### 5、删除远端分支
+```
+#注意:使用该命令，如果其他用户已经使用了该命令，并且git branch -r有远程分支,则使用该命令会失败
+git push origin --delete <name>
+```
+```
+#这个没有上面那个的问题
+git branch -r -d origin/branch-name
+```
+##### 6、从远程分支创建本地新分支
+```
+#第一步
+git fetch
+#创建并跟踪,它指定了新分支名
+git checkout -b 本地分支名 origin/远程分支名
+#这个以远程分支名为本地新建分支名
+git checkout --track origin/远程分支名
+```
+```
+误解:我原先以为:git fetch会自然地把远程分支给拉取下拉，但实际它拉不了，这是我以前的误解
+要使用上面的命令来拉取并创建
+```
