--- a/分支管理.md
+++ b/分支管理.md
@@ -87,3 +87,4 @@ git checkout --track origin/远程分支名
 误解:我原先以为:git fetch会自然地把远程分支给拉取下拉，但实际它拉不了，这是我以前的误解
 要使用上面的命令来拉取并创建
 ```
+[参考链接](https://git-scm.com/book/zh/v2/Git-%E5%88%86%E6%94%AF-%E8%BF%9C%E7%A8%8B%E5%88%86%E6%94%AF)
