--- a/分支管理.md
+++ b/分支管理.md
@@ -17,7 +17,7 @@
 切换分支: git checkout <name>
 ```
 ```
-创建+切换分支: git branch -b <name>
+创建+切换分支: git  -b <name>
 ```
 ```
 合并分支到当前分支: git merge <name>
