--- a/查看硬件信息.md
+++ b/查看硬件信息.md
@@ -30,6 +30,10 @@ du -h test1.txt test2.txt 查看多个文件容量大小
 fdisk -l 分区工具查看分区信息
 lsblk 查看分区和磁盘
 ```
+```
+查看硬盘空间情况
+df -hl
+```
 ### 3、查看cpu信息
 ```
 # 总核数 = 物理CPU个数 X 每颗物理CPU的核数 
@@ -50,6 +54,7 @@ cat /proc/cpuinfo| grep "processor"| wc -l
 #查看线程数
 cat /proc/cpuinfo| grep "processor"| sort | uniq | wc -l
 ```
-[参考一](https://www.cnblogs.com/kingsonfu/p/10125307.html)
-[参考二](https://www.cnblogs.com/ivictor/p/6208573.html)
-[参考三](https://blog.csdn.net/fox_wayen/article/details/80642718)
+[参考一](https://www.cnblogs.com/kingsonfu/p/10125307.html)<br>
+[参考二](https://www.cnblogs.com/ivictor/p/6208573.html)<br>
+[参考三](https://blog.csdn.net/fox_wayen/article/details/80642718)<br>
+[硬盘空间情况参考](https://www.cnblogs.com/davygeek/p/8532303.html)
